name:                yesodServant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yesodServant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Routes
                     , Servant.API
  build-depends:       base >= 4.7 && < 5
                     , yesod-core == 1.4.35.1
                     , servant == 0.11
                     , servant-server
                     , aeson
                     , text
                     , wai
  default-language:    Haskell2010

executable runApp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yesodServant
                     , yesod-core == 1.4.35.1
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yesodServant
